--- a/Gfycat/src/main/res/layout/activity_main.xml
+++ b/Gfycat/src/main/res/layout/activity_main.xml
@@ -7,9 +7,15 @@
     tools:context="net.danlew.gfycat.ui.MainActivity"
     tools:ignore="MergeRootFrame">
 
+    <TextureView
+        android:id="@+id/video_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
+
 </FrameLayout>
