Made Activity translucent w/ fade in
Also got rid of some unused code

--- a/Gfycat/src/main/res/layout/activity_main.xml
+++ b/Gfycat/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/window_background"
     tools:context="net.danlew.gfycat.ui.MainActivity"
     tools:ignore="MergeRootFrame">
 
