--- a/Gfycat/src/main/res/layout/activity_stats.xml
+++ b/Gfycat/src/main/res/layout/activity_stats.xml
@@ -14,6 +14,7 @@
         android:textSize="18sp" />
 
     <TextView
+        android:id="@+id/savings"
         android:layout_width="192dp"
         android:layout_height="192dp"
         android:layout_marginBottom="12dp"
