Gfy progress bar using RxJava
- Fixed vertical size/placement issues
- Only shown if gfy is greater than 1000ms in length
- Added null check

--- a/Gfycat/src/main/res/layout/activity_main.xml
+++ b/Gfycat/src/main/res/layout/activity_main.xml
@@ -20,4 +20,12 @@
         android:layout_gravity="center"
         android:indeterminateDrawable="@drawable/progress_gfycat" />
 
+    <ProgressBar android:id="@+id/video_progress_bar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:minHeight="5dp"
+        android:maxHeight="5dp" />
+
 </FrameLayout>
