--- a/Gfycat/src/main/res/layout/activity_main.xml
+++ b/Gfycat/src/main/res/layout/activity_main.xml
@@ -21,11 +21,12 @@
         android:indeterminateDrawable="@drawable/progress_gfycat" />
 
     <ProgressBar android:id="@+id/video_progress_bar"
-        style="@android:style/Widget.ProgressBar.Horizontal"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:visibility="invisible"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:minHeight="5dp"
-        android:maxHeight="5dp" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="-10dp"
+        android:layout_marginBottom="-8dp" />
 
 </FrameLayout>
