Gfy progress bar
- Fixed vertical height by setting progress bar marings instead of padding

--- a/Gfycat/src/main/res/layout/activity_main.xml
+++ b/Gfycat/src/main/res/layout/activity_main.xml
@@ -23,10 +23,9 @@
     <ProgressBar android:id="@+id/video_progress_bar"
         style="?android:attr/progressBarStyleHorizontal"
         android:visibility="invisible"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="-10dp"
-        android:layout_marginBottom="-8dp" />
+        android:layout_marginTop="-6dp" />
 
 </FrameLayout>
