--- a/Gfycat/src/main/res/values/themes.xml
+++ b/Gfycat/src/main/res/values/themes.xml
@@ -1,7 +1,12 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="TranslucentActivity" parent="android:Theme.Holo.Light.NoActionBar">
+    <style name="BaseTheme" parent="android:Theme.Holo.Light.DarkActionBar" />
+
+    <style name="BaseTheme.NoActionBar" parent="android:Theme.Holo.Light.NoActionBar" />
+
+    <style name="MainTheme" parent="BaseTheme" />
+
+    <style name="TranslucentActivity" parent="BaseTheme.NoActionBar">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowIsTranslucent">true</item>
