--- a/Gfycat/src/main/res/layout/activity_main.xml
+++ b/Gfycat/src/main/res/layout/activity_main.xml
@@ -20,12 +20,12 @@
         android:layout_gravity="center"
         android:indeterminateDrawable="@drawable/progress_gfycat" />
 
-    <ProgressBar android:id="@+id/video_progress_bar"
+    <ProgressBar
+        android:id="@+id/video_progress_bar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:visibility="invisible"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="-6dp" />
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/video_progress_bar_height"
+        android:layout_gravity="top|center_horizontal"
+        android:visibility="invisible" />
 
 </FrameLayout>
